test/fixtures/public/fail/semantic/extra/nonExistentType.jmm
class Type {

  public NonExistType f(Type t, NonExistType n) {
    return 0;
  }

}

